<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Song List</string>
    <string name="title_notifications">Song Player</string>
    <string name="music_application">Music Application</string>
    <string name="rap">Rap</string>
    <string name="blues">Blues</string>
    <string name="rock">Rock</string>
    <string name="salsa">Salsa</string>
    <string name="electronic">Electronic</string>
    <string name="reggae">Reggae</string>
    <string name="folk">Folk</string>
    <string name="genres">Genres:</string>
    <string name="all">All</string>

    <string-array name="songs">
        <item>Test, Test2, Test3</item>
        <item>Test4, Test5, Test6</item>
        <item>Test7, Test8, Test9</item>
    </string-array>
</resources>
